--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -1,20 +1,32 @@
 <!--  Replace menu links here -->
 
 <li class="nav-item">
-<a class="nav-link" href="{{site.baseurl}}/index.html">Home</a>
+<a class="nav-link" href="{{site.baseurl}}/index.html">首頁</a>
 </li>
-<li class="nav-item">
-<a class="nav-link" href="{{site.baseurl}}/authors-list.html">Authors</a>
-</li>
-<li class="nav-item">
+
+<!-- <li class="nav-item">
 <a class="nav-link" href="{{site.baseurl}}/contact.html">Contact</a>
-</li>
-<li class="nav-item">
+</li> -->
+<!-- <li class="nav-item">
 <a target="_blank" class="nav-link" href="https://www.wowthemes.net/themes/mundana-wordpress/">WP</a>
-</li>
-<li class="nav-item">
+</li> -->
+<!-- <li class="nav-item">
 <a target="_blank" class="nav-link" href="https://www.wowthemes.net/themes/mundana-ghost/">Ghost</a>
+</li> -->
+
+<li class="nav-item">
+<a target="_blank" class="nav-link" href="{{site.baseurl}}/tags.html">標籤</a>
 </li>
 <li class="nav-item">
-<a target="_blank" class="nav-link" href="https://www.wowthemes.net/donate/">Buy me a coffee <i class="fa fa-coffee text-danger"></i></a>
+<a target="_blank" class="nav-link" href="{{site.baseurl}}/categories.html">分類</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="{{site.baseurl}}/authors-list.html">作者群</a>
+</li>
+<li class="nav-item">
+<a target="_blank" class="nav-link" href="{{site.baseurl}}/about.html">關於我</a>
+</li>
+
+<li class="nav-item">
+<a target="_blank" class="nav-link" href="{{site.baseurl}}/buy-me-a-coffee.html">贊助我咖啡 <i class="fa fa-coffee text-danger"></i></a>
 </li>
