--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -4,9 +4,9 @@
 <a class="nav-link" href="{{site.baseurl}}/index.html">首頁</a>
 </li>
 
-<!-- <li class="nav-item">
+<li class="nav-item">
 <a class="nav-link" href="{{site.baseurl}}/contact.html">Contact</a>
-</li> -->
+</li>
 <!-- <li class="nav-item">
 <a target="_blank" class="nav-link" href="https://www.wowthemes.net/themes/mundana-wordpress/">WP</a>
 </li> -->
