--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -4,9 +4,7 @@
 <a class="nav-link" href="{{site.baseurl}}/index.html">首頁</a>
 </li>
 
-<li class="nav-item">
-<a class="nav-link" href="{{site.baseurl}}/contact.html">Contact</a>
-</li>
+
 <!-- <li class="nav-item">
 <a target="_blank" class="nav-link" href="https://www.wowthemes.net/themes/mundana-wordpress/">WP</a>
 </li> -->
@@ -26,7 +24,9 @@
 <li class="nav-item">
 <a target="_blank" class="nav-link" href="{{site.baseurl}}/about.html">關於我</a>
 </li>
-
+<li class="nav-item">
+<a class="nav-link" href="{{site.baseurl}}/contact.html">聯繫</a>
+</li>
 <li class="nav-item">
 <a target="_blank" class="nav-link" href="{{site.baseurl}}/buy-me-a-coffee.html">贊助我咖啡 <i class="fa fa-coffee text-danger"></i></a>
 </li>
