--- a/_includes/tracking-footer.html
+++ b/_includes/tracking-footer.html
@@ -1,1 +1,5 @@
 <!-- All this area goes before </body> closing tag --> 
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W7V9X27F"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
